[package]
name = "clippy"
version = "1.0.14"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "All of the Clippy lints as a Dylint library"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", rev = "7b2896a8fc9f0b275692677ee6d2d66a7cbde16a"}
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "7b2896a8fc9f0b275692677ee6d2d66a7cbde16a"}
serde_json = "1.0.79"

dylint_internal = { path = "../../internal", features = ["git2"] }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
anyhow = "1.0.55"
cargo_metadata = "0.14.2"
env_logger = "0.9.0"
log = "0.4.14"
tempfile = "3.3.0"
test-log = "0.2.8"

dylint = { path = "../../dylint", default-features = false }
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
