[package]
name = "clippy"
version = "2.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "All of the Clippy lints as a Dylint library"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_lints = { git = "https://github.com/rust-lang/rust-clippy", rev = "abc59bb9144a97ec23d187dcb2cb28dd88271297" }
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "abc59bb9144a97ec23d187dcb2cb28dd88271297" }
serde_json = "1.0.79"

dylint_internal = { path = "../../internal", features = ["git2"] }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
anyhow = "1.0.56"
cargo_metadata = "0.14.2"
env_logger = "0.9.0"
log = "0.4.16"
tempfile = "3.3.0"
test-log = "0.2.10"

dylint = { path = "../../dylint", default-features = false }
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
