[package]
name = "crate_wide_allow"
version = "2.0.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for `#![allow(...)]` used at the crate level"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "main"
path = "ui/main.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "abc59bb9144a97ec23d187dcb2cb28dd88271297" }
if_chain = "1.0.2"

dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
assert_cmd = "2.0.4"
lazy_static = "1.4.0"

dylint_internal = { path = "../../internal" }
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]

