[package]
name = "env_literal"
version = "2.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for environment variables referred to with string literals"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "c995a8b5017766246ac5cfe66baa074eeee3a5a3"}
if_chain = "1.0.2"

dylint_internal = { path = "../../internal" }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
