[package]
name = "general"
version = "3.1.2"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "General-purpose lints"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
abs_home_path = { path = "abs_home_path", features = ["rlib"] }
await_holding_span_guard = { path = "await_holding_span_guard", features = [
    "rlib",
] }
basic_dead_store = { path = "basic_dead_store", features = ["rlib"] }
crate_wide_allow = { path = "crate_wide_allow", features = ["rlib"] }
incorrect_matches_operation = { path = "incorrect_matches_operation", features = [
    "rlib",
] }
non_local_effect_before_error_return = { path = "non_local_effect_before_error_return", features = [
    "rlib",
] }
non_thread_safe_call_in_test = { path = "non_thread_safe_call_in_test", features = [
    "rlib",
] }
wrong_serialize_struct_arg = { path = "wrong_serialize_struct_arg", features = [
    "rlib",
] }

dylint_linting = { path = "../../utils/linting" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [
    "abs_home_path",
    "await_holding_span_guard",
    "basic_dead_store",
    "crate_wide_allow",
    "incorrect_matches_operation",
    "non_local_effect_before_error_return",
    "non_thread_safe_call_in_test",
]

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "1325425589efdaf4bba99c37f0d80030ab53aac5" }

[workspace.metadata.dylint]
libraries = [
    { path = "../general" },
    { path = "../supplementary" },
    { path = "../testing/clippy" },
    { path = "../restriction/*" },
]
