[package]
name = "general"
version = "5.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "General-purpose lints"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
abs_home_path = { path = "abs_home_path", features = ["rlib"] }
await_holding_span_guard = { path = "await_holding_span_guard", features = [
    "rlib",
] }
basic_dead_store = { path = "basic_dead_store", features = ["rlib"] }
crate_wide_allow = { path = "crate_wide_allow", features = ["rlib"] }
incorrect_matches_operation = { path = "incorrect_matches_operation", features = [
    "rlib",
] }
non_local_effect_before_error_return = { path = "non_local_effect_before_error_return", features = [
    "rlib",
] }
non_thread_safe_call_in_test = { path = "non_thread_safe_call_in_test", features = [
    "rlib",
] }
wrong_serialize_struct_arg = { path = "wrong_serialize_struct_arg", features = [
    "rlib",
] }

dylint_linting = { path = "../../utils/linting" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = ["*"]
exclude = [".cargo", "src"]

[workspace.dependencies]
bitflags = "2.10"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
derivative = "2.2.0"
once_cell = "1.21"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option-if-let-else = "allow"
struct-field-names = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../general" },
    { path = "../supplementary" },
    { path = "../testing/clippy" },
    { path = "../restriction/*" },
]
