[package]
name = "nonreentrant_function_in_test"
version = "1.0.3"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for nonreentrant functions in tests"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.54.0"}
if_chain = "1.0.2"
lazy_static = "1.4.0"

dylint_internal = { path = "../../internal" }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
