[package]
name = "nonreentrant_function_in_test"
version = "2.0.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for nonreentrant functions in tests"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "interprocedural"
path = "ui_late/interprocedural.rs"

[[example]]
name = "one_test"
path = "ui_late/one_test.rs"

[[example]]
name = "set_current_dir"
path = "ui_late/set_current_dir.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "abc59bb9144a97ec23d187dcb2cb28dd88271297" }
if_chain = "1.0.2"

dylint_internal = { path = "../../internal" }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
lazy_static = "1.4.0"

dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
