[package]
name = "path_separator_in_string_literal"
version = "1.0.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for path separators in string literals"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.54.0"}
if_chain = "1.0.1"

dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[workspace]
