[package]
name = "question_mark_in_expression"
version = "1.0.13"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for the `?` operator in expressions"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "clone"
path = "ui/clone.rs"

[[example]]
name = "ls"
path = "ui/ls.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "7b2896a8fc9f0b275692677ee6d2d66a7cbde16a"}
if_chain = "1.0.2"

dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
git2 = "0.13.25"
tempfile = "3.3.0"

dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
