[workspace]
members = ["*"]
exclude = [".cargo"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
camino = "1.2"
cargo_metadata = "0.23"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
diesel = "2.3"
git2 = "0.20"
heck = "0.5"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.24"
thiserror = "2.0"
toml = "0.9"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option-if-let-else = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../general" },
    { path = "../supplementary" },
    { path = "../testing/clippy" },
    { path = "../restriction/*" },
]
