[workspace]
members = ["*"]
exclude = [".cargo"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
camino = "1.2"
cargo_metadata = "0.23"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f6d310692116e9a527ce6d0b3526c965d9c5d7b9" }
diesel = "2.3"
git2 = "0.20"
heck = "0.5"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.27"
thiserror = "2.0"
toml = "1.1"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option-if-let-else = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../general" },
    { path = "../supplementary" },
    { path = "../testing/clippy" },
    { path = "../restriction/*" },
]
