[package]
name = "straggler"
version = "2.0.2"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint used only for testing purpose"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# smoelius: `straggler` is intentionally held back for testing purposes.
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "abc59bb9144a97ec23d187dcb2cb28dd88271297" }
if_chain = "1.0.2"

dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]

