[package]
name = "supplementary"
version = "3.5.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Supplementary lints"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
commented_code = { path = "commented_code", features = ["rlib"] }
escaping_doc_link = { path = "escaping_doc_link", features = ["rlib"] }
inconsistent_struct_pattern = { path = "inconsistent_struct_pattern", features = [
    "rlib",
] }
local_ref_cell = { path = "local_ref_cell", features = ["rlib"] }
redundant_reference = { path = "redundant_reference", features = ["rlib"] }
unnamed_constant = { path = "unnamed_constant", features = ["rlib"] }
unnecessary_borrow_mut = { path = "unnecessary_borrow_mut", features = [
    "rlib",
] }
unnecessary_conversion_for_trait = { path = "unnecessary_conversion_for_trait", features = [
    "rlib",
] }

dylint_linting = { path = "../../utils/linting" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [
    "commented_code",
    "escaping_doc_link",
    "inconsistent_struct_pattern",
    "local_ref_cell",
    "redundant_reference",
    "unnamed_constant",
    "unnecessary_borrow_mut",
    "unnecessary_conversion_for_trait",
]

[workspace.dependencies]
cargo-util = "0.2"
cargo_metadata = "0.18"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "19e305bb57a7595f2a8d81f521c0dd8bf854e739" }
once_cell = "1.20"
pulldown-cmark = "0.10"
regex = "1.11"
serde = "1.0"
syn = "2.0"
tempfile = "3.14"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option-if-let-else = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../general" },
    { path = "../supplementary" },
    { path = "../testing/clippy" },
    { path = "../restriction/*" },
]
