[package]
name = "depinfo_dylint_libs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../../examples/restriction/question_mark_in_expression" },
    { path = "../../examples/restriction/try_io_result" },
]
