[package]
name = "name_toolchain_map"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.metadata.dylint]
libraries = [
    { path = "../../examples/restriction/question_mark_in_expression" },
    { path = "../../examples/testing/clippy" },
    { path = "../../examples/testing/straggler" },
]
