[package]
name = "fill_me_in"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
