[package]
name = "fill_me_in"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "e645f93552c3926a0bb481a777df120b7bce986f" }
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
