[package]
name = "fill_me_in"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "9fca3bc9fc2bc83c60bde26d18ed68f11564b228" }
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
